Bug 2052188 - Move Close as Invalid button after resolution buttons, add spacing and tooltip

--- a/extensions/BugModal/web/bug_modal.css
+++ b/extensions/BugModal/web/bug_modal.css
@@ -383,6 +383,10 @@ input[type="number"] {
   white-space: nowrap;
 }
 
+#close-as-invalid-btn {
+  margin-left: 16px;
+}
+
 #after-comment-commit-button {
   margin-bottom: 4px;
 }
